# cqlls

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ca.crt  docker.md  justfile  setup.sh
scylla/: README.md  c2n.yaml  cqlshrc  n2n.yaml  scylla.yaml  supervisord-notls.conf
scylla-certs/: ca.crt  ca.key  ca.srl  san.cnf  server.crt  server.csr  server.key
src/: cmd.rs  completions.rs  config.rs  consts.rs  cqlsh.rs  diagnostics.rs  formatting.rs  handlers.rs  lib.rs  logger.rs  lsp.rs  main.rs  setup.rs  test_base.rs  tree_sitter.rs  utils.rs  version.rs
tests/: cqlls.rs  scylla.rs  scylla_no_tls.rs  scylla_tls.rs
tests/cql/expected/: alter_materialized_view.cql  alter_table.cql  batch.cql  consistency_level.cql  create_aggregate.cql  create_function.cql  create_index.cql  create_materialized_view.cql  create_search_index.cql  create_table.cql  create_type.cql  delete.cql  having.cql  insert.cql  primary_key.cql  select.cql  update.cql
tests/cql/fmt/: create_function.cql  create_table.cql  insert.cql  select.cql
tests/cql/nofmt/: create_function.txt  create_table.txt
tests/cql/provided/: alter_table.txt  create_function.txt  create_index.txt  create_materialized_view.txt  having.txt  insert.txt  primary_key.txt  select.txt
