[package]
name = "cql_lsp"
description = "CQL (Cassandra Query Language) LSP"
version = "1.0.3"
authors = ["アクゼスティア <akzestia@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["lsp", "cql", "language-server", "syntax"]
categories = ["text-editors", "command-line-utilities"]
repository = "https://github.com/Akzestia/cql-lsp"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = "4.5.54"
dirs = "6.0.0"
fern = "0.7.1"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.27"
once_cell = "1.21.3"
regex = "1.11.1"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
scylla = { version = "1.1.0", features = ["full-serialization", "rustls-023"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-lsp = "0.20.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.25.3"
tttx-tree-sitter-cql = "0.1.0"

[lib]
path = "src/lib.rs"
name = "cql_lsp"
